--- a/src/components/mascotBio/mascotBio.css
+++ b/src/components/mascotBio/mascotBio.css
@@ -1,25 +1,46 @@
 .mascot-bio-container {
   margin-top: 5vh;
   display: flex;
-  justify-content: flex-start;
-  margin-left: 15vw;
-  column-gap: 5vw;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 5vh;
 }
 
 .mascot-bio-photo {
-  width: 25vw;
+  width: 60vw;
   max-height: 60vh;
 }
 
 .mascot-bio {
-display: flex;
-flex-direction: column;
-row-gap: 5vh;
-text-align: left;
+  display: flex;
+  flex-direction: column;
+  row-gap: 3vh;
+  text-align: center;
 }
 
 .mascot-bio-group {
-display: flex;
-flex-direction: column;
-row-gap: 2vh;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2vh;
+}
+
+@media screen and (min-width: 1200px) {
+  .mascot-bio-photo {
+    width: 20vw;
+    max-height: 60vh;
+  }
+  .mascot-bio-container {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 20vw;
+    column-gap: 5vw;
+  }
+  .mascot-bio {
+    text-align: left;
+    row-gap: 5vh;
+  }
 }
