--- a/src/components/photo/Photo.css
+++ b/src/components/photo/Photo.css
@@ -2,12 +2,11 @@
   width: 15vh;
   height: 15vh;
   cursor: pointer;
-  transition: transform 0.2s, filter 0.2s;
+  transition: filter 0.2s;
   position: absolute;
 }
 
 .mascot-photo:hover {
   border-radius: 120px;
-  transform: scale(1.1);
   filter: brightness(1.1);
 }
