--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 9999;
+    background-color: #f2eee6;
   }
   .mobile-nav {
     display: flex;
@@ -28,6 +30,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 9998;
+    background-color: #f2eee6;
   }
   .blank {
     flex-grow: 0.25;
