--- a/src/components/logo/Logo.css
+++ b/src/components/logo/Logo.css
@@ -7,3 +7,10 @@
   width: 40vh;
   height: 20vh;
 }
+
+@media screen and (max-width: 1000px) {
+  .logo {
+    width: 25vh;
+    height: 12.5vh;
+  }
+}
