--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -12,10 +12,6 @@
   text-decoration: none;
 }
 
-.link-text {
-  font-size: 2.5vh;
-}
-
 .link-text:hover {
   color: rgb(0, 0, 255);
 }
@@ -51,6 +47,7 @@
     justify-content: center;
     align-items: center;
     column-gap: 5vw;
+    margin-top: 5vh;
   }
   .active-link .active-dot {
     display: block;
