--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -12,6 +12,10 @@
   text-decoration: none;
 }
 
+.link-text {
+  font-size: 2.5vh;
+}
+
 .link-text:hover {
   color: rgb(0, 0, 255);
 }
@@ -55,5 +59,8 @@
 
   .active-link .link-text {
     color: black;
+  }
+  .link-text {
+    font-size: 3vh;
   }
 }
