--- a/src/components/admin/adminGallery/AdminGallery.css
+++ b/src/components/admin/adminGallery/AdminGallery.css
@@ -23,3 +23,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1000px) and (orientation: landscape) {
+  .admin-sub-img {
+    width: 40vh;
+  }
+}
