--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,36 @@ button:hover {
   }
 }
 
+@media screen and (max-width: 1000px) and (orientation: landscape) {
+  h1 {
+    font-size: 16vh;
+  }
+
+  h2 {
+    font-size: 12vh;
+  }
+
+  h3 {
+    font-size: 10vh;
+  }
+
+  h4 {
+    font-size: 8vh;
+  }
+
+  h5 {
+    font-size: 6vh;
+  }
+
+  h6 {
+    font-size: 3.5vh;
+  }
+
+  p {
+    font-size: 3vh;
+  }
+}
+
 @media screen and (min-width: 1001px) {
   * {
     cursor: none;
