--- a/src/pages/submit/Submit.css
+++ b/src/pages/submit/Submit.css
@@ -15,15 +15,12 @@
 }
 
 .thank-you-hero {
+  margin-top: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 30vh;
   height: 30vh;
-}
-
-.success-mark {
-  font-family: cursive;
 }
 
 .photo-upload-container {
@@ -196,6 +193,11 @@
     align-items: flex-start;
     margin-top: 0vh;
     column-gap: 10vh;
+  }
+
+  .thank-you-hero {
+    width: 40vh;
+    height: 40vh;
   }
 
   .text-block {
