--- a/src/components/logo/Logo.css
+++ b/src/components/logo/Logo.css
@@ -2,11 +2,13 @@
   background-color: #f2eee6;
   padding: 2vh 0vh;
   width: 100%;
+  margin-top: -10vh;
 }
 
 .logo {
   width: 25vh;
   height: 12.5vh;
+  margin-top: 10vh;
 }
 
 @media screen and (min-width: 1001px) {
