--- a/src/components/cursorColorPicker/CursorColorPicker.css
+++ b/src/components/cursorColorPicker/CursorColorPicker.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-@media screen and (min-width: 1001px) and (min-height: 900px) {
+@media screen and (min-width: 1001px) {
   .cursor-color-picker-wrapper {
     display: flex;
     justify-content: center;
