--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,12 @@
-.gallery-wrapper {
-  position: relative;
-  top: 0vh;
-  height: 100vh;
-}
-
 @media screen and (max-width: 1000px) and (orientation: portrait) {
   .mobile-header {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 9999;
     background-color: #f2eee6;
   }
@@ -19,6 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 18vh;
     padding-bottom: 2vh;
   }
   .desktop-header {
