--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
 @media screen and (max-width: 1000px) and (orientation: portrait) {
   .mobile-header {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
     z-index: 9999;
     background-color: #f2eee6;
   }
+
   .mobile-nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 18vh;
-    padding-bottom: 2vh;
+    padding-bottom: 5vh;
   }
+
   .desktop-header {
     display: none;
   }
