--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,17 @@
   .desktop-header {
     display: none;
   }
+
+  .loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5vh;
+  }
+
+  .loading-message {
+    font-size: 5vh;
+  }
 }
 
 @media screen and (max-width: 1000px) and (orientation: landscape) {
